# cheerlights-terminal

./: .gitignore  README.md  main.py  pyproject.toml
src/cheerlights_terminal/: __init__.py  ascii_art.py  cheerlights.py  main.py
